# cocktail-db

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: main.py
app/api/: const.py  deps.py  main.py
app/api/routes/: cocktail.py  ingredient.py  main.py
app/core/: config.py  db.py  init_db.py  utils.py
app/html_services/: __init__.py  cocktail.py  ingredient.py
app/models/: __init__.py  base.py  cocktail.py  component.py  enums.py  forms.py  ingredient.py
app/services/: __init__.py  base.py  cocktail.py  ingredient.py
app/static/css/: my_css.css  yoSelect.css
app/static/js/: minimal-theme-switcher.js  modal.js  yoSelect.js
